fixed cutoff

--- a/_sass/jekyll-theme-minimalist.scss
+++ b/_sass/jekyll-theme-minimalist.scss
@@ -279,11 +279,8 @@ footer {
   }
 
   .circular-box img {
-    position: absolute;
     border-radius: 50%;
-    top: 40px;
-    left: 50%;
-    transform: translateX(-50%);
+    margin-top: 10px;
     width: 250px;
     height: 250px;
     object-fit: cover;
